--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "sass": "^1.63.6"
   },
   "devDependencies": {
+    "@types/node": "^20.3.2",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^4.0.0",
