hardcoding in directions for the chat app specifications

--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "concurrently": "^5.1.0"
   },
   "dependencies": {
-    "eslint": "^8.42.0",
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.0"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.0",
+    "eslint": "^8.42.0"
   },
   "repository": {
     "type": "git",
