--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.0.16",
     "@reduxjs/toolkit": "^1.9.2",
     "react": "^18.2.0",
+    "react-chat-engine": "^1.11.28",
     "react-chat-engine-advanced": "^0.1.28",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
